--- a/index.html
+++ b/index.html
@@ -3,51 +3,126 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
 <main>
-    <h1 class="text-center mt-5 mb-5">TODO LIST</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <form id="todoForm">
-                    <div class="mb-3">
-                        <label class="form-label">Task title</label>
-                        <input type="text" required name="title" class="form-control">
-                    </div>
-                    <div class="mb-3">
-                        <label  class="form-label">Task body</label>
-                        <textarea name="description" required class="form-control" placeholder="Task body" cols="30" rows="10"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Create Task!</button>
-                </form>
-            </div>
 
+        <div class="container">
+            <div class="row">
+                <div class="col-12 phone-book">
+                    <nav class="navbar navbar-dark mb-3">
+                        <div class="container-fluid justify-content-end p-0 ">
+                            <input class='form-control' disabled type="search" id="searchInp" placeholder="Search" aria-label="Search">
+                            <button class="navbar-toggler navbar-toggler-cast" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                                <img class="navbar-add-contact" src="./images/add-contact.png">
+                            </button>
+                            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                                <div class="offcanvas-header justify-content-end">
+                                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                </div>
+                                <div class="offcanvas-body">
+                                    <form id="todoForm">
+                                        <div class="mb-3">
+                                            <label class="form-label ">Name</label>
+                                            <input type="text" required name="name" class="form-control">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label  class="form-label">Number phone</label>
+                                            <input type="tel" required name="phone" class="form-control">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label  class="form-label">Job title</label>
+                                            <input type="text" required name="job" class="form-control">
+                                        </div>
+                                        <button type="submit" class="btn btn-primary"  data-bs-dismiss="offcanvas" >Create Task!</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </nav>
+                    <p class="no-contacts">
+                        Нет контактов
+                    </p>
 
-            <div class="col-8">
-                <div class="row" id="todoItems">
-
-                    <!--                    <div class="col-4">-->
-<!--                                            <div class="taskWrapper">-->
-<!--                                                <div class="taskHeading">Title</div>-->
-<!--                                                <div class="taskDescription">Task body</div>-->
-<!--                                            </div>-->
-                    <!--                    </div>-->
+                    <div class="row" id="todoItems"></div>
 
 
                 </div>
-
             </div>
         </div>
-    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--    <h1 class="text-center mt-5 mb-5">-->
+<!--    <div class="container">-->
+<!--        <div class="row">-->
+<!--            <div class="col-4">-->
+<!--                <form id="todoForm">-->
+<!--                    <div class="mb-3">-->
+<!--                        <label class="form-label">Task title</label>-->
+<!--                        <input type="text" required name="title" class="form-control">-->
+<!--                    </div>-->
+<!--                    <div class="mb-3">-->
+<!--                        <label  class="form-label">Task body</label>-->
+<!--                        <textarea name="description" required class="form-control" placeholder="Task body" cols="30" rows="10"></textarea>-->
+<!--                    </div>-->
+<!--                    <button type="submit" class="btn btn-primary">Create Task!</button>-->
+<!--                </form>-->
+<!--            </div>-->
+
+
+<!--            <div class="col-8">-->
+<!--                <div class="row" id="todoItems">-->
+
+<!--                    &lt;!&ndash;                    <div class="col-4">&ndash;&gt;-->
+<!--&lt;!&ndash;                                            <div class="taskWrapper">&ndash;&gt;-->
+<!--&lt;!&ndash;                                                <div class="taskHeading">Title</div>&ndash;&gt;-->
+<!--&lt;!&ndash;                                                <div class="taskDescription">Task body</div>&ndash;&gt;-->
+<!--&lt;!&ndash;                                            </div>&ndash;&gt;-->
+<!--                    &lt;!&ndash;                    </div>&ndash;&gt;-->
+
+
+<!--                </div>-->
+
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 </main>
-<script src="./js/app/view.js"></script>
-<script src="./js/app/controller.js"></script>
-<script src="./js/app/model.js"></script>
-<script src="./js/app/app.js"></script>
+<script src="./js2/app/view.js"></script>
+<script src="./js2/app/controller.js"></script>
+<script src="./js2/app/model.js"></script>
+<script src="./js2/app/app.js"></script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </body>
 
