--- a/index.html
+++ b/index.html
@@ -54,76 +54,10 @@
             </div>
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--    <h1 class="text-center mt-5 mb-5">-->
-<!--    <div class="container">-->
-<!--        <div class="row">-->
-<!--            <div class="col-4">-->
-<!--                <form id="todoForm">-->
-<!--                    <div class="mb-3">-->
-<!--                        <label class="form-label">Task title</label>-->
-<!--                        <input type="text" required name="title" class="form-control">-->
-<!--                    </div>-->
-<!--                    <div class="mb-3">-->
-<!--                        <label  class="form-label">Task body</label>-->
-<!--                        <textarea name="description" required class="form-control" placeholder="Task body" cols="30" rows="10"></textarea>-->
-<!--                    </div>-->
-<!--                    <button type="submit" class="btn btn-primary">Create Task!</button>-->
-<!--                </form>-->
-<!--            </div>-->
-
-
-<!--            <div class="col-8">-->
-<!--                <div class="row" id="todoItems">-->
-
-<!--                    &lt;!&ndash;                    <div class="col-4">&ndash;&gt;-->
-<!--&lt;!&ndash;                                            <div class="taskWrapper">&ndash;&gt;-->
-<!--&lt;!&ndash;                                                <div class="taskHeading">Title</div>&ndash;&gt;-->
-<!--&lt;!&ndash;                                                <div class="taskDescription">Task body</div>&ndash;&gt;-->
-<!--&lt;!&ndash;                                            </div>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                    </div>&ndash;&gt;-->
-
-
-<!--                </div>-->
-
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
 </main>
-<script src="./js2/app/view.js"></script>
-<script src="./js2/app/controller.js"></script>
-<script src="./js2/app/model.js"></script>
-<script src="./js2/app/app.js"></script>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-
+<script src="./js2/app/app.js" type="module"></script>
 </body>
 
 </html>
