--- a/index.html
+++ b/index.html
@@ -1,123 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-<main>
-
-
-
-
-    <div class="modal modal-custom fade" id="exampleModal-1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <main>
+      <div
+        class="modal modal-custom fade"
+        id="exampleModal-1"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
         <div class="modal-dialog modal-dialog-custom align-items-center d-flex">
-            <div class="modal-content modal-content-custom">
-                <div class="modal-header modal-header-custom border-0 bg-black">
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+          <div class="modal-content modal-content-custom">
+            <div class="modal-header modal-header-custom border-0 bg-black">
+              <button
+                type="button"
+                class="btn-close btn-close-white"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+
+            <div class="modal-body modal-body-custom bg-black d-flex">
+              <div>
+                <div class="label_info">
+                  Name: <span class="name_info"></span>
                 </div>
-
-                <div class="modal-body modal-body-custom bg-black d-flex">
-                    <div>
-                        <div class="photoContact_info d-flex justify-content-center mb-3"></div>
-                        <div class="label_info">Name: <span class="name_info"></span></div>
-                        <div class="label_info">Phone number: <span class="phone_info"></span></div>
-                        <div class="label_info">Job title: <span class="job_info"></span></div>
-                    </div>
-
-                    <div class="d-flex justify-content-center mb-5">
-                        <a href="" class="callContact_info">
-                            <img src="./images/btn-call.png" alt="">
-                        </a>
-                    </div>
+                <div class="label_info">
+                  Phone number: <span class="phone_info"></span>
                 </div>
+                <div class="label_info">
+                  Job title: <span class="job_info"></span>
+                </div>
+              </div>
 
+              <div class="d-flex justify-content-center mb-5">
+                <a href="" class="callContact_info">
+                  <img src="./images/btn-call.png" alt="" />
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="modal modal-custom fade"
+        id="exampleModal-2"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-custom align-items-center d-flex">
+          <div class="modal-content modal-content-custom">
+            <div class="modal-header modal-header-custom border-0 bg-black">
+              <button
+                type="button"
+                class="btn-close btn-close-white"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+
+            <div class="modal-body modal-body-custom bg-black d-flex">
+
+              <form id="changeForm">
+                <div class="mb-3">
+                  <label class="form-label">Name</label>
+                  <input
+                    type="text"
+                    required
+                    name="name"
+                    class="form-control"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Number phone</label>
+                  <input
+                    type="number"
+                    required
+                    name="phone"
+                    class="form-control"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Job title</label>
+                  <input type="text" required name="job" class="form-control" />
+                </div>
+                <button
+                  type="submit"
+                  class="btn btn-primary"
+                  data-bs-dismiss="offcanvas"
+                >
+                  update
+                </button>
+              </form>
+<!--              ////////////-->
 
             </div>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <div class="modal modal-custom fade" id="exampleModal-2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-custom align-items-center d-flex">
-            <div class="modal-content modal-content-custom">
-                <div class="modal-header modal-header-custom border-0 bg-black">
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 phone-book rounded-4">
+            <nav class="navbar navbar-dark mb-3">
+              <div class="container-fluid justify-content-end p-0">
+                <input
+                  class="form-control"
+                  disabled
+                  type="search"
+                  id="searchInp"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+                <button
+                  class="navbar-toggler navbar-toggler-cast"
+                  type="button"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#offcanvasDarkNavbar"
+                  aria-controls="offcanvasDarkNavbar"
+                >
+                  <img
+                    class="navbar-add-contact"
+                    src="./images/add-contact.png"
+                  />
+                </button>
+                <div
+                  class="offcanvas offcanvas-end text-bg-dark"
+                  tabindex="-1"
+                  id="offcanvasDarkNavbar"
+                  aria-labelledby="offcanvasDarkNavbarLabel"
+                >
+                  <div class="offcanvas-header justify-content-end">
+                    <button
+                      type="button"
+                      class="btn-close btn-close-white"
+                      data-bs-dismiss="offcanvas"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="offcanvas-body">
 
-                <div class="modal-body modal-body-custom bg-black d-flex">
-                    <form id="editForm">
-                        <div class="mb-3">
-                            <label class="form-label ">Name</label>
-                            <input type="text" required name="name" class="form-control">
-                        </div>
-                        <div class="mb-3">
-                            <label  class="form-label">Number phone</label>
-                            <input type="number" required name="phone" class="form-control">
-                        </div>
-                        <div class="mb-3">
-                            <label  class="form-label">Job title</label>
-                            <input type="text" required name="job" class="form-control">
-                        </div>
-                        <button type="submit" class="btn btn-primary"  data-bs-dismiss="offcanvas" >update</button>
+
+                    <form id="pBookForm">
+                      <div class="mb-3">
+                        <label class="form-label">Name</label>
+                        <input
+                          type="text"
+                          required
+                          name="name"
+                          class="form-control"
+                        />
+                      </div>
+                      <div class="mb-3">
+                        <label class="form-label">Number phone</label>
+                        <input
+                          type="number"
+                          required
+                          name="phone"
+                          class="form-control"
+                        />
+                      </div>
+                      <div class="mb-3">
+                        <label class="form-label">Job title</label>
+                        <input
+                          type="text"
+                          required
+                          name="job"
+                          class="form-control"
+                        />
+                      </div>
+                      <button
+                        type="submit"
+                        class="btn btn-primary"
+                        data-bs-dismiss="offcanvas"
+                      >
+                        Create Task!
+                      </button>
                     </form>
+<!--                    ////////-->
+                  </div>
                 </div>
+              </div>
+            </nav>
+            <p class="no-contacts">Нет контактов</p>
 
-
-            </div>
+            <div class="row" id="bookItems"></div>
+          </div>
         </div>
-    </div>
+      </div>
+    </main>
 
-    <div class="container">
-            <div class="row">
-                <div class="col-12 phone-book rounded-4">
-                    <nav class="navbar navbar-dark mb-3">
-                        <div class="container-fluid justify-content-end p-0 ">
-                            <input class='form-control' disabled type="search" id="searchInp" placeholder="Search" aria-label="Search">
-                            <button class="navbar-toggler navbar-toggler-cast" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-                                <img class="navbar-add-contact" src="./images/add-contact.png">
-                            </button>
-                            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-                                <div class="offcanvas-header justify-content-end">
-                                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                                </div>
-                                <div class="offcanvas-body">
-                                    <form id="pBookForm">
-                                        <div class="mb-3">
-                                            <label class="form-label ">Name</label>
-                                            <input type="text" required name="name" class="form-control">
-                                        </div>
-                                        <div class="mb-3">
-                                            <label  class="form-label">Number phone</label>
-                                            <input type="number" required name="phone" class="form-control">
-                                        </div>
-                                        <div class="mb-3">
-                                            <label  class="form-label">Job title</label>
-                                            <input type="text" required name="job" class="form-control">
-                                        </div>
-                                        <button type="submit" class="btn btn-primary"  data-bs-dismiss="offcanvas" >Create Task!</button>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </nav>
-                    <p class="no-contacts">
-                        Нет контактов
-                    </p>
-
-                    <div class="row" id="bookItems"></div>
-
-                </div>
-            </div>
-        </div>
-
-</main>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-<script src="./js2/app/app.js" type="module"></script>
-
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/app/app.js" type="module"></script>
+  </body>
 </html>
