--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         class="btn btn-primary"
                         data-bs-dismiss="offcanvas"
                       >
-                        Create Task!
+                        Create contact!
                       </button>
                     </form>
 <!--                    ////////-->
@@ -195,7 +195,7 @@
                 </div>
               </div>
             </nav>
-            <p class="no-contacts">Нет контактов</p>
+            <p class="no-contacts">No contacts</p>
 
             <div class="row" id="bookItems"></div>
           </div>
